<resources>
    <string name="app_name">MATH</string>
    <string name="hello">Hello, Hitakrit</string>
    <string name="counting">Counting</string>
    <string name="addition">Addition</string>
    <string name="comparison">Comparison</string>
    <string name="learn_tables">Learn\nTables</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="greater">\u003e</string>
    <string name="less">\u003C</string>
    <string name="equal">"="</string>

</resources>