<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".HomeScreen">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:letterSpacing="0.06"
            android:paddingLeft="10dp"
            android:paddingTop="25dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:text="@string/hello"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="38sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/count_button"
            android:layout_width="205dp"
            android:layout_height="270dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="138dp"
            android:background="@drawable/rounded_corners_pink"
            android:text="@string/counting"
            android:textAlignment="center"
            android:textSize="40sp" />

        <Button
            android:id="@+id/comparison_button"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="204dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="331dp"
            android:background="@drawable/circle_purple"
            android:text="@string/comparison"
            android:textSize="25sp" />

        <Button
            android:id="@+id/addition_button"
            android:layout_width="213dp"
            android:layout_height="215dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="73dp"
            android:background="@drawable/circle_purple"
            android:text="@string/addition"
            android:textSize="35sp" />

        <Button
            android:id="@+id/learn_tables_button"
            android:layout_width="144dp"
            android:layout_height="228dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="75dp"
            android:background="@drawable/rounded_corners_pink"
            android:fontFamily="@font/bangers"
            android:text="@string/learn_tables"
            android:textSize="30sp" />
    </RelativeLayout>
</ScrollView>